--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "express-async-handler": "^1.1.4",
     "morgan": "^1.10.0",
     "mssql": "^6.2.0",
-    "nodemon": "^2.0.3",
     "request": "^2.88.2",
     "tedious": "^8.3.0",
     "tedious-connection-pool": "^1.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
+  
 }
