--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dbutil": "0.0.1",
     "dotenv": "^8.2.0",
@@ -29,4 +30,6 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
+
+
 }
